Se corrigió la verificación del correo